; ModuleID = '/home/carl/AnghaBench/linux/fs/xfs/scrub/extr_btree.c_xchk_btree_xref_process_error.c'
source_filename = "/home/carl/AnghaBench/linux/fs/xfs/scrub/extr_btree.c_xchk_btree_xref_process_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfs_scrub = type { i32 }
%struct.xfs_btree_cur = type { i32 }

@XFS_SCRUB_OFLAG_XFAIL = common dso_local global i32 0, align 4
@__return_address = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xchk_btree_xref_process_error(%struct.xfs_scrub* %0, %struct.xfs_btree_cur* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.xfs_scrub*, align 8
  %6 = alloca %struct.xfs_btree_cur*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.xfs_scrub* %0, %struct.xfs_scrub** %5, align 8
  store %struct.xfs_btree_cur* %1, %struct.xfs_btree_cur** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load %struct.xfs_scrub*, %struct.xfs_scrub** %5, align 8
  %10 = load %struct.xfs_btree_cur*, %struct.xfs_btree_cur** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %8, align 8
  %13 = load i32, i32* @XFS_SCRUB_OFLAG_XFAIL, align 4
  %14 = load i32, i32* @__return_address, align 4
  %15 = call i32 @__xchk_btree_process_error(%struct.xfs_scrub* %9, %struct.xfs_btree_cur* %10, i32 %11, i32* %12, i32 %13, i32 %14)
  ret i32 %15
}

declare dso_local i32 @__xchk_btree_process_error(%struct.xfs_scrub*, %struct.xfs_btree_cur*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
